<resources>
    <string name="app_name">MyApp</string>
    <string name="button">Меню</string>
    <string name="button2">Избранное</string>
    <string name="button3">Посмотреть позже</string>
    <string name="button4">Подборки</string>
    <string name="button5">Настройки</string>
    <string name="page">Search it!</string>
    <string name="menu_home_title_text">Главная</string>
    <string name="text_view">Постеры предоставлены yandex.ru</string>
    <string name="radio_button_popular">Популярные</string>
    <string name="radio_button_top_rated">Топ</string>
    <string name="radio_button_upcoming">Скоро</string>
    <string name="radio_button_playing">В кинотеатрах</string>
    <string name="radio_group_header">Подборка на главном экране:</string>
    <string name="button_clearCache">Очитстить кэш</string>
    <string name="button_ClearInCacheBadFilms">Удалить фильмы с рейтингом ниже 7</string>
    <string name="permission_storage">Нет разрешения. Пожалуйста, предоставьте разрешение</string>
    <string name="downloaded_to_gallery">"Сохранено в галерею"</string>
    <string name="open">В галерею</string>
    <string name="toast_battery_low">Батарея разряжена</string>
    <string name="toast_power_connected">Зарядка подключена</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="download">Загрузить</string>
</resources>