<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/menu_home_title_text"/>
    <item
        android:id="@+id/favorites"
        android:icon="@drawable/favorite"
        android:title="@string/button2"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/watch_later"
        android:icon="@drawable/later"
        android:title="@string/button3"
        app:showAsAction="withText"
        />
    <item
        android:id="@+id/selections"
        android:icon="@drawable/podbor"
        android:title="@string/button4"/>
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_round_settings_24"
        android:title="@string/button5"
        app:showAsAction="withText"/>
</menu>